1. handle bad login 2. fix modal covering nav 3. only create modal form if logged in

--- a/themes/watchThis/assets/css/styles.less
+++ b/themes/watchThis/assets/css/styles.less
@@ -7,16 +7,18 @@
 @bloodRed: #660000;
 @otherRed: #A82A15;
 
-*{ margin: 0; padding: 0; }*
+*{ margin: 0; }*
 :focus, :active { outline: 0; }
 html{
 	height: 100%;
+	padding-bottom: 25px;
 }
 body{
 	font: .9em Georgia, "Times New Roman", Sans-Serif;
 	background: #DEDEDF;
 	color: #333;
 	height: 100%;
+	padding-bottom: 25px;
 }
 
 a{
@@ -44,6 +46,7 @@ h1{
 	margin: 20px 0 50px;
 	font-size: 4em;
 	color: #fff;
+	z-index: 100000;
 }
 
 h2{
